Add working prototype

--- a/src/web-app/appsettings.json
+++ b/src/web-app/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "Email": {
+    "SmtpHost": "",
+    "SmtpPort": 25,
+    "FromEmail": "notify@mesi.io",
+    "FromName": "mesi-notify",
+    "Subject": "Notified by mesi"
+  }
 }
