--- a/src/application-layer/application-layer.csproj
+++ b/src/application-layer/application-layer.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>Mesi.Notify.Infra</RootNamespace>
+        <RootNamespace>Mesi.Notify.ApplicationLayer</RootNamespace>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
@@ -12,7 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 
 </Project>
