--- a/src/web-app/client-app/package.json
+++ b/src/web-app/client-app/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^4.6.0",
+    "css-loader": "^5.0.2",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
+    "sass": "^1.32.7",
+    "sass-loader": "^11.0.1",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "webpack": "^5.21.2",
@@ -17,6 +23,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "lit-element": "^2.4.0"
+    "jquery": "^3.5.1",
+    "lit-element": "^2.4.0",
+    "popper.js": "^1.16.1"
   }
 }
