--- a/src/web-app/web-app.csproj
+++ b/src/web-app/web-app.csproj
@@ -56,4 +56,8 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\LICENSE.txt" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.3" />
+    </ItemGroup>
+
 </Project>
