Add staging deployment

--- a/src/web-app/appsettings.Development.json
+++ b/src/web-app/appsettings.Development.json
@@ -8,6 +8,11 @@
   },
   "Email": {
     "SmtpHost": "localhost",
-    "SmtpPort": 2500
+    "SmtpPort": 25
+  },
+  "Authentication": {
+    "Authority": "https://is4.raspi",
+    "ClientId": "mesi-notify-dev",
+    "ClientSecret": "secret"
   }
 }
