--- a/src/web-app/appsettings.json
+++ b/src/web-app/appsettings.json
@@ -8,9 +8,16 @@
   },
   "Email": {
     "SmtpHost": "",
-    "SmtpPort": 25,
-    "FromEmail": "notify@mesi.io",
+    "SmtpPort": 587,
+    "SmtpUser": "",
+    "SmtpPassword": "",
+    "FromEmail": "notify@dasmesi.net",
     "FromName": "mesi-notify",
     "Subject": "Notified by mesi"
+  },
+  "Authentication": {
+    "Authority": "",
+    "ClientId": "",
+    "ClientSecret": ""
   }
 }
