--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 wwwroot/
+*.pem
+*.zip
 
 # User-specific files
 *.rsuser
